--- a/SAIL/slides.Rmd
+++ b/SAIL/slides.Rmd
@@ -19,7 +19,7 @@ style_mono_light(base_color = "#23395b", link_color = "#F97B64")
 ```
 
 ```{r xaringan-scribble, echo=FALSE}
-xaringanExtra::use_scribble()
+# xaringanExtra::use_scribble()
 ```
 
 ```{r setup, include=FALSE}
